# toy_shell

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
src/: command.rs  core.rs  feeder.rs  main.rs
src/core/: builtins.rs  command.rs  job.rs  pipeline.rs  script.rs
