[package]
name = "toy_shell"
version = "0.1.0"
edition = "2021"
authors = ["Sayama0310 <montblanc3060@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
nix = "0.26.2"
regex = "1.8.4"
rustyline = "11.0.0"
